Removed encoder capture help

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12536,29 +12536,7 @@ on current Chronojump version.</property>
                                                             <widget class="GtkHBox" id="hbox77">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="spacing">4</property>
-                                                            <child>
-                                                            <widget class="GtkButton" id="button_encoder_capture_help">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">True</property>
-                                                            <property name="receives_default">True</property>
-                                                            <property name="has_tooltip">True</property>
-                                                            <property name="use_action_appearance">False</property>
-                                                            <signal name="clicked" handler="on_button_encoder_capture_help_clicked" swapped="no"/>
-                                                            <child>
-                                                            <widget class="GtkImage" id="image2">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="stock">gtk-help</property>
-                                                            </widget>
-                                                            </child>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="position">0</property>
-                                                            </packing>
-                                                            </child>
+                                                            <property name="spacing">6</property>
                                                             <child>
                                                             <widget class="GtkHBox" id="hbox75">
                                                             <property name="visible">True</property>
@@ -12582,7 +12560,7 @@ on current Chronojump version.</property>
                                                             </child>
                                                             <child>
                                                             <widget class="GtkRadioButton" id="radiobutton_encoder_capture_external">
-                                                            <property name="label" translatable="yes">Ext.</property>
+                                                            <property name="label" translatable="yes">External</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
@@ -12603,7 +12581,7 @@ on current Chronojump version.</property>
                                                             <packing>
                                                             <property name="expand">False</property>
                                                             <property name="fill">True</property>
-                                                            <property name="position">1</property>
+                                                            <property name="position">0</property>
                                                             </packing>
                                                             </child>
                                                             <child>
@@ -12627,7 +12605,7 @@ on current Chronojump version.</property>
                                                             <packing>
                                                             <property name="expand">False</property>
                                                             <property name="fill">False</property>
-                                                            <property name="position">2</property>
+                                                            <property name="position">1</property>
                                                             </packing>
                                                             </child>
                                                             </widget>
