Encoder preferences smooth in user localization

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -25331,25 +25331,23 @@ show elevation as:</property>
                                     <property name="can_focus">False</property>
                                     <property name="spacing">8</property>
                                     <child>
-                                      <widget class="GtkLabel" id="label10">
+                                      <widget class="GtkLabel" id="label_encoder_ecc_con">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
-                                        <property name="label" translatable="yes">0.6</property>
                                       </widget>
                                       <packing>
-                                        <property name="expand">False</property>
+                                        <property name="expand">True</property>
                                         <property name="fill">True</property>
                                         <property name="position">0</property>
                                       </packing>
                                     </child>
                                     <child>
-                                      <widget class="GtkLabel" id="label12">
+                                      <widget class="GtkLabel" id="label_encoder_con">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
-                                        <property name="label" translatable="yes">0.7</property>
                                       </widget>
                                       <packing>
-                                        <property name="expand">False</property>
+                                        <property name="expand">True</property>
                                         <property name="fill">True</property>
                                         <property name="position">1</property>
                                       </packing>
