--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12237,7 +12237,7 @@ on current Chronojump version.</property>
                                                             <property name="secondary_icon_activatable">False</property>
                                                             <property name="primary_icon_sensitive">True</property>
                                                             <property name="secondary_icon_sensitive">True</property>
-                                                            <property name="adjustment">10 0 300 1 10 0</property>
+                                                            <property name="adjustment">0 0 300 1 10 0</property>
                                                             <property name="climb_rate">1</property>
                                                             <property name="snap_to_ticks">True</property>
                                                             <property name="numeric">True</property>
@@ -12291,6 +12291,7 @@ on current Chronojump version.</property>
                                                             <property name="snap_to_ticks">True</property>
                                                             <property name="numeric">True</property>
                                                             <property name="update_policy">if-valid</property>
+                                                            <signal name="value_changed" handler="on_spin_encoder_extra_weight_value_changed" swapped="no"/>
                                                             </widget>
                                                             <packing>
                                                             <property name="top_attach">1</property>
