--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12232,7 +12232,7 @@ on current Chronojump version.</property>
                                                             <property name="sensitive">False</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="invisible_char">●</property>
-                                                            <property name="width_chars">3</property>
+                                                            <property name="width_chars">5</property>
                                                             <property name="invisible_char_set">True</property>
                                                             <property name="primary_icon_activatable">False</property>
                                                             <property name="secondary_icon_activatable">False</property>
@@ -12240,6 +12240,7 @@ on current Chronojump version.</property>
                                                             <property name="secondary_icon_sensitive">True</property>
                                                             <property name="adjustment">0 0 300 1 10 0</property>
                                                             <property name="climb_rate">1</property>
+                                                            <property name="digits">2</property>
                                                             <property name="snap_to_ticks">True</property>
                                                             <property name="numeric">True</property>
                                                             </widget>
